--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.26)
 
-project (oop2_ex01)
-set (MY_AUTHORS "Re'em Hoisman")
+project (oop2_project)
+set (MY_AUTHORS "")
 
 include (cmake/CompilerSettings.cmake)
 
@@ -12,5 +12,18 @@ target_link_options(${CMAKE_PROJECT_NAME} PRIVATE $<$<CONFIG:DEBUG>:-fsanitize=a
 
 add_subdirectory (include)
 add_subdirectory (src)
+add_subdirectory (resources)
 
 include (cmake/Zip.cmake)
+
+set (SFML_LOCATION "C:/SFML/SFML-2.6.0")
+set (SFML_DIR "${SFML_LOCATION}/lib/cmake/SFML")
+
+find_package (SFML 2.6 COMPONENTS graphics REQUIRED)
+
+set_target_properties (sfml-main sfml-system sfml-window sfml-graphics sfml-audio sfml-network PROPERTIES MAP_IMPORTED_CONFIG_RELWITHDEBINFO RELEASE)
+
+target_link_libraries (${CMAKE_PROJECT_NAME} sfml-graphics sfml-main)
+
+include (cmake/SFML.cmake)
+
