--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -3,3 +3,5 @@ configure_file ("background.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("tileMap.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("mainGround.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("ground.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("basicEnemiesSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PizzaEnemySheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
