--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -9,3 +9,4 @@ configure_file ("PizzaEnemySheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("cheese.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("salt.png" ${CMAKE_BINARY_DIR} COPYONLY)
 
+configure_file ("papaLoueiFont.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
