--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -10,3 +10,5 @@ configure_file ("cheese.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("salt.png" ${CMAKE_BINARY_DIR} COPYONLY)
 
 configure_file ("papaLoueiFont.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("explosionSpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
