--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -8,6 +8,8 @@ configure_file ("basicEnemiesSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PizzaEnemySheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("cheese.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("salt.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("heart.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
 
 configure_file ("papaLoueiFont.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("explosionSpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
