--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -13,6 +13,7 @@ configure_file ("coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
 
 configure_file ("papaLoueiFont.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("explosionSpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("pizza.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("papaLoueiHead.png" ${CMAKE_BINARY_DIR} COPYONLY)
 
 
