--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -15,5 +15,8 @@ configure_file ("papaLoueiFont.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("explosionSpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("pizza.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("papaLoueiHead.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("buttons.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+configure_file ("menuBackground.png" ${CMAKE_BINARY_DIR} COPYONLY)
 
 
