--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -17,6 +17,8 @@ configure_file ("pizza.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("papaLoueiHead.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("buttons.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("controls.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("cage.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
 
 
 configure_file ("menuBackground.png" ${CMAKE_BINARY_DIR} COPYONLY)
