--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -10,7 +10,6 @@ configure_file ("cheese.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("salt.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("heart.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
-
 configure_file ("papaLoueiFont.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("explosionSpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("pizza.png" ${CMAKE_BINARY_DIR} COPYONLY)
@@ -19,9 +18,17 @@ configure_file ("buttons.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("controls.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("cage.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("fatPerson.png" ${CMAKE_BINARY_DIR} COPYONLY)
-
-
-
 configure_file ("menuBackground.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+
+
+configure_file ("coinSound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("explodeSound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("flySound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("jumpSound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("levelUpSound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("playerEnemySound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("takeSaltSound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+
 
 
