--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -35,7 +35,7 @@ configure_file ("papaLoueiSong.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("pause.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("menuButton.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("GameOverBG.png" ${CMAKE_BINARY_DIR} COPYONLY)
-
+configure_file ("level3.png" ${CMAKE_BINARY_DIR} COPYONLY)
 
 
 
