--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -37,6 +37,8 @@ configure_file ("menuButton.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("GameOverBG.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("level3.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("DOKYO.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("howToPlay.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
 
 
 
