--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,29 +1,50 @@
-﻿configure_file ("playerSpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("background.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("frameBackground.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("mainGround.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("ground.png" ${CMAKE_BINARY_DIR} COPYONLY)
+﻿# ----------- Backgrounds ----------
+configure_file ("gameBG.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("gameFrameBG.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("papaLoueiHead.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("menuBG.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("GameOverBG.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("howToPlay.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("controls.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("loading.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+# ----------- Animations ----------
+configure_file ("playerSpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("basicEnemiesSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PizzaEnemySheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("explosionSpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("fatPerson.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+# ----------- Buttons ----------
+configure_file ("buttons.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("pause.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("menuButton.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+# ----------- Game Objects ----------
+configure_file ("grassGround.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("ground.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("cheese.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("salt.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("heart.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("papaLoueiFont.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("explosionSpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("pizza.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("papaLoueiHead.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("buttons.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("controls.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("cage.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("fatPerson.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("menuBackground.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("level1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("ladder.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("friend.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("cage.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+# ----------- Fonts ----------
+configure_file ("DOKYO.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("papaLoueiFont.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
+
+# ----------- Levels ----------
+configure_file ("level1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("level2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("level3.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+# ----------- playlist ----------
 configure_file ("playlist.txt" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("loading.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+# ----------- Sounds ----------
 configure_file ("coinSound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("explodeSound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("flySound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
@@ -32,15 +53,3 @@ configure_file ("levelUpSound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("playerEnemySound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("takeSaltSound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("papaLoueiSong.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("pause.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("menuButton.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("GameOverBG.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("level3.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("DOKYO.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("howToPlay.png" ${CMAKE_BINARY_DIR} COPYONLY)
-
-
-
-
-
-
